force-app/main/default/objects/Certification_Answer__c/Certification_Answer__c.object-meta.xml
<CustomObject>
    <description>Used to store the ratings given to the sales rep</description>
    <label>Certification Answer</label>
    <nameField>
        <label>Certification Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>