force-app/main/default/objects/Certification_Answer__c/fields/Auto_updated__c.field-meta.xml
<CustomField>
    <fullName>Auto_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates if the answer score was copied over from the previous month since the manager failed to update ratings</description>
    <label>Auto updated?</label>
    <type>Checkbox</type>
</CustomField>