force-app/main/default/objects/Certification_Answer__c/fields/cert_rating_weight__c.field-meta.xml
<CustomField>
    <fullName>cert_rating_weight__c</fullName>
    <formula>VALUE(TEXT(Certifcation_Rating__r.Weight__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cert_rating_weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>