force-app/main/default/objects/Certification_Answer__c/fields/Certifcation__c.field-meta.xml
<CustomField>
    <fullName>Certifcation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the reference to the Certification record that the answer is related to</description>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certification Answers</relationshipLabel>
    <relationshipName>Certification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>