force-app/main/default/objects/Certification_Answer__c/fields/Certifcation_Rating__c.field-meta.xml
<CustomField>
    <fullName>Certifcation_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the reference of the rating/question</description>
    <label>Certification Rating</label>
    <referenceTo>Certification_Rating__c</referenceTo>
    <relationshipLabel>Certification Answers</relationshipLabel>
    <relationshipName>Certification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>