force-app/main/default/objects/Certification_Answer__c/fields/Certification_ID__c.field-meta.xml
<CustomField>
    <fullName>Certification_ID__c</fullName>
    <formula>Certifcation__r.Id</formula>
    <label>Certification ID</label>
    <type>Text</type>
</CustomField>