force-app/main/default/objects/Certification_Answer__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date before which the answer should be updated</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>