force-app/main/default/objects/Certification_Answer__c/fields/Due_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Month__c</fullName>
    <description>This formula determines the month within the Due Date for reporting purposes.</description>
    <formula>MONTH( Due_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>