force-app/main/default/objects/Certification_Answer__c/fields/Due_Date_Month_Text__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Month_Text__c</fullName>
    <description>Used as a text fill in for month date in reports.</description>
    <formula>Due_Date_Year__c &amp; &quot;-&quot; &amp; CASE(MONTH(Due_Date__c), 
1, &quot;1-JAN&quot;, 
2, &quot;2-FEB&quot;, 
3, &quot;3-MAR&quot;, 
4, &quot;4-APR&quot;, 
5, &quot;5-MAY&quot;, 
6, &quot;6-JUN&quot;, 
7, &quot;7-JUL&quot;, 
8, &quot;8-AUG&quot;, 
9, &quot;9-SEP&quot;, 
10, &quot;10-OCT&quot;, 
11, &quot;11-NOV&quot;, 
12, &quot;12-DEC&quot;, 
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Month Text</label>
    <type>Text</type>
</CustomField>