force-app/main/default/objects/Certification_Answer__c/fields/Due_Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Quarter__c</fullName>
    <description>This formula determines the Quarter of the Due Date for reporting purposes.</description>
    <formula>TEXT(YEAR( Due_Date__c )) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH(Due_Date__c)-1)/3)+1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Quarter</label>
    <type>Text</type>
</CustomField>