force-app/main/default/objects/Certification_Answer__c/fields/Due_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Year__c</fullName>
    <description>This formula determines the Year of the Due Date for reporting purposes.</description>
    <formula>TEXT(YEAR( Due_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Year</label>
    <type>Text</type>
</CustomField>