force-app/main/default/objects/Certification_Answer__c/fields/Escalation_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Email_Date__c</fullName>
    <description>The date on which an escalation email should be sent to the manager</description>
    <label>Escalation Email Date</label>
    <type>Date</type>
</CustomField>