force-app/main/default/objects/Certification_Answer__c/fields/Manager_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Date__c</fullName>
    <description>The date on which email should be triggered to the manager</description>
    <label>Manager Email Date</label>
    <type>Date</type>
</CustomField>