force-app/main/default/objects/Certification_Answer__c/fields/Rating_Calculation_type__c.field-meta.xml
<CustomField>
    <fullName>Rating_Calculation_type__c</fullName>
    <description>This is created for display purposes on the Rep status update page. This can be fetched for reports from the Certification rating lookup on this object.</description>
    <label>Calculation type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>