force-app/main/default/objects/Certification_Answer__c/fields/Rating_description__c.field-meta.xml
<CustomField>
    <fullName>Rating_description__c</fullName>
    <description>Stores the description of the rating this answer record is associated with - required for display purposes on the RepStatusUpdate page. This can be fetched from the Certification Rating lookup on this object. This field was created as the description was to be displayed before creation of answer records.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>