force-app/main/default/objects/Certification_Answer__c/fields/Rating_name_picklist__c.field-meta.xml
<CustomField>
    <fullName>Rating_name_picklist__c</fullName>
    <description>Stores the name of the rating the answer record is associated with</description>
    <label>Certification name picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Names</valueSetName>
    </valueSet>
</CustomField>