force-app/main/default/objects/Certification_Answer__c/fields/Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Rating_Score__c</fullName>
    <description>Stores the score given by the manager</description>
    <label>Certification Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>