force-app/main/default/objects/Certification_Answer__c/fields/Rating_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Start_Date__c</fullName>
    <description>The date from which the manager can start rating the rep</description>
    <label>Rating Start Date</label>
    <type>Date</type>
</CustomField>