force-app/main/default/objects/Certification_Answer__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the sales profile the answer record is associated with</description>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Certification Answers</relationshipLabel>
    <relationshipName>Certification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>