force-app/main/default/objects/Certification_Answer__c/fields/SRP_Snapshot_ID__c.field-meta.xml
<CustomField>
    <fullName>SRP_Snapshot_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the Snapshot with Cert Answers for the purpose of integrated reporting.</description>
    <label>SRP Snapshot ID</label>
    <referenceTo>Sales_Rep_Profile_Snapshot__c</referenceTo>
    <relationshipLabel>Certification Answers</relationshipLabel>
    <relationshipName>Certification_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>