force-app/main/default/objects/Certification_Answer__c/fields/Tenatative_rating_score__c.field-meta.xml
<CustomField>
    <fullName>Tenatative_rating_score__c</fullName>
    <description>This is used to save the score to submit later</description>
    <label>Tenatative rating/score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>