force-app/main/default/objects/Certification_Answer__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <description>Stores the Weight  * Score</description>
    <formula>Rating_Score__c * VALUE(TEXT(Certifcation_Rating__r.Weight__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>