force-app/main/default/objects/Certification_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Certifcation__c</columns>
    <columns>Sales_Rep_Profile__c</columns>
    <columns>Rating_Score__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rating_Score__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>